s/whoami.svc.lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-lb
spec:
  selector:
    app: whoami
  ports:
    - port: 80
      name: http
  type: LoadBalancer
